[MENU] collapse bug fixed

--- a/Server/src/main/webapp/resources/main.css
+++ b/Server/src/main/webapp/resources/main.css
@@ -30,3 +30,7 @@ html, body {
     overflow: hidden;
     white-space: nowrap;
 }
+
+.navbar-default {
+    margin-bottom:0;
+}
